--- a/webproje/source/ozgecmis.html
+++ b/webproje/source/ozgecmis.html
@@ -141,16 +141,16 @@
           </div>
           <div>
             <h5 class="baslikStyle"><i class="fas fa-school"></i> LİSE (2017-2021)</h5>
-            <h5><a href="https://atakoycal.meb.k12.tr/  " class="link" target="_blank"> Medine Uluslararası Türk Anadolu Lisesi, Suudi Arabistan/Medine</a></h5>
+            <h5><a href="https://medineturkokulu.meb.k12.tr/tema/okulumuz_hakkinda.html " class="link" target="_blank"> Medine Uluslararası Türk Anadolu Lisesi, Suudi Arabistan/Medine</a></h5>
           </div>
           <div>
             <h5 class="baslikStyle"><i class="fas fa-school"></i> ORTAOKUL (2013-2017)</h5>
-            <h5><a href="https://okul.com.tr/ilkokul/istanbul/fatih-imam-hatip-ortaokulu-3739 " class="link"
+            <h5><a href="https://odunpazarifsmiho.meb.k12.tr" class="link"
                 target="_blank"> Orhangazi İmam Hatip Ortaokulu, Eskişehir</a></h5>
           </div>
           <div>
             <h5 class="baslikStyle"><i class="fas fa-school"></i> İLKOKUL (2009-2013)</h5>
-            <h5><a href="https://esenlermehmetakifersoyio.meb.k12.tr/ " class="link" target="_blank"> Dumlupınar İlkokulu, Eskişehir</a></h5>
+            <h5><a href="https://dumlupinarilkokulu26.meb.k12.tr " class="link" target="_blank"> Dumlupınar İlkokulu, Eskişehir</a></h5>
           </div>
         </div>
       </div>
