--- a/webproje/source/index.html
+++ b/webproje/source/index.html
@@ -26,7 +26,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light navbarSet">
       <div class="container-fluid m-auto">
-        <a class="navbar-brand " href="../source/index.html">Ekrem Selçuk Çelik</a>
+        <a class="navbar-brand " href="index.html">Ekrem Selçuk Çelik</a>
         <button class="navbar-toggler " textSettype="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
           aria-label="Toggle navigation">
@@ -34,11 +34,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="../source/ozgecmis.html">Özgeçmiş</a>
-            <a class="nav-link" href="../source/sehrim.html">Memleketim</a>
-            <a class="nav-link" href="../source/mirasimiz.html">Mirasımız</a>
-            <a class="nav-link" href="../source/iletisim.html">İletişim</a>
-            <a class="nav-link" href="../source/login.html">Login</a>
+            <a class="nav-link active" href="ozgecmis.html">Özgeçmiş</a>
+            <a class="nav-link" href="sehrim.html">Memleketim</a>
+            <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
+            <a class="nav-link" href="iletisim.html">İletişim</a>
+            <a class="nav-link" href="login.html">Login</a>
 
           </div>
         </div>
